`/fi/doc/procedures/changelogs.txt'.
*******************************************************************************
<version for this commit> (in version.mak)

<standard changelog date stamp>
	* <changes go here...>

*******************************************************************************
2.1.3

2000-10-21  Kevin Layer  <layer@ultra>

	* Makefile: remove readme.htm depend
	* fi-compile.el: don't build readme0.htm anymore
	* local.mak: don't distribute Doc0.el

*******************************************************************************
<no version change>

2000-10-03  Kevin Layer  <layer@ultra>

	* move RELNOTES entries to RELNOTES.60, since I filed an rfe on
	them

*******************************************************************************
2.1.2

2000-09-26  Kevin Layer  <layer@ultra>

	* Makefile: fix xemacs location

*******************************************************************************
2.1.1

2000-09-18  Kevin Layer  <layer@ultra>

	* fi-keys.el: make fill-paragraph handle more than one space
	beyond the ;;.
	* fi-utils.el: make auto-fill of comments handle ";; - " special:
	don't fill to ";; - " but rather ";;   ".  The variable
	fi::auto-fill-hyphen-special controls this, in case someone
	doesn't like it.

*******************************************************************************
2.1.0

2000-09-05  Kevin Layer  <layer@ultra>

	* local.mak: remove html files from release_files

*******************************************************************************
2.1.beta.0

2000-07-29  Kevin Layer  <layer@ultra>

	* localfidev.el: ignore certain build errors

*******************************************************************************
2.1.pre-beta.7

2000-07-06  Kevin Layer  <layer@ultra>

	* fi-modes.el: handle cl:in-package, too

*******************************************************************************
2.1.pre-beta.6

2000-06-27  Kevin Layer  <layer@ultra>

	* fi-utils.el (fi::switch-to-buffer): ignore mini-buffer and